@@ -1,6 +1,6 @@
 {
   "name": "mapvue",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "description": "MapVue is a comprehensive MapboxGL component library. You can easily and happily apply MapVue to your Vue projects. Import various data sources and layers in the form of components, and modify the state of the layer by modifying the parameters of props.",
   "author": {
     "name": "chinesejar",
@@ -57,6 +57,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "chart.js": "^3.9.1",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "geojson": "^0.5.0",
