@@ -9,6 +9,7 @@ specifiers:
   '@vue/eslint-config-prettier': ^7.0.0
   '@vue/eslint-config-typescript': ^11.0.0
   '@vue/tsconfig': ^0.1.3
+  chart.js: ^3.9.1
   eslint: ^8.5.0
   eslint-plugin-vue: ^9.0.0
   geojson: ^0.5.0
@@ -34,6 +35,7 @@ devDependencies:
   '@vue/eslint-config-prettier': 7.0.0_vvfpqh5kol6rhqy7beehv5uezq
   '@vue/eslint-config-typescript': 11.0.0_usemwu2orllh6tzptz2hsp6y3e
   '@vue/tsconfig': 0.1.3_@types+node@16.11.45
+  chart.js: 3.9.1
   eslint: 8.20.0
   eslint-plugin-vue: 9.2.0_eslint@8.20.0
   geojson: 0.5.0
@@ -571,6 +573,10 @@ packages:
     dependencies:
       ansi-styles: 4.3.0
       supports-color: 7.2.0
+    dev: true
+
+  /chart.js/3.9.1:
+    resolution: {integrity: sha512-Ro2JbLmvg83gXF5F4sniaQ+lTbSv18E+TIf2cOeiH1Iqd2PGFOtem+DUufMZsCJwFE7ywPOpfXFBwRTGq7dh6w==}
     dev: true
 
   /color-convert/1.9.3:
